...
                viewModel.getAllItems()
            }
            is UiState.Success -> {
                HomeContent(
                    orderItems = uiState.data,
                    modifier = modifier,
                    search = search,
                    onSearchQueryChanged = { newQuery ->
                        search = newQuery
                        viewModel.search(newQuery)
                    },
                    navigateToDetail = navigateToDetail,
                )
...
    ){ innerPadding ->
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = innerPadding,
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.padding(16.dp).testTag("homeScreen")
        ) {
            items(orderItems) { data ->
                SellItem(
                    image = data.items.image,
                    title = data.items.title,
                    requiredPoint = data.items.requiredPoint,
...
